--- a/Tex-Paper-Template.tex
+++ b/Tex-Paper-Template.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage [pdftex]{graphicx}
-\graphicspath{{C:\Users\megal\Desktop\btflw.eps}}
+\graphicspath{{C:\Users\your_graphics_path}}
 \DeclareGraphicsExtensions{.pdf,.jpeg,.png,.jpg,.eps}
 \title{Working in Data Science}
 \date{today}
